versioned_docs/version-1.1.0/flexbox-grid/align-self.mdx
---
title: Align Self
---

import ClassList from '@site/src/components/ClassList/ClassList';
import ClassPreview from '@site/src/components/ClassPreview/ClassPreview';

Individually aligns a flex or grid item along the cross-axis within its container.

<ClassList
  classData={[
    {
        className: 'as-auto',
        properties: [
            'align-self: auto;'
        ]
    },
    {
        className: 'as-n',
        properties: [
            'align-self: normal;'
        ]
    },
    {
        className: 'as-c',
        properties: [
            'align-self: center;'
        ]
    },
    {
        className: 'as-start',
        properties: [
            'align-self: start;'
        ]
    },
    {
        className: 'as-e',
        properties: [
            'align-self: end;'
        ]
    },
    {
        className: 'as-fs',
        properties: [
            'align-self: flex-start;'
        ]
    },
    {
        className: 'as-fe',
        properties: [
            'align-self: flex-end;'
        ]
    },
    {
        className: 'as-stretch',
        properties: [
            'align-self: stretch;'
        ]
    }
  ]}
/>