versioned_docs/version-2.0.0/flexbox-grid/align-self.mdx
---
title: Align Self
description: Controls the positioning of a single flex or grid element along the transverse axis of its container.
slug: /align-self
---

import ClassList from '@site/src/components/ClassList/ClassList';
import ClassPreview from '@site/src/components/ClassPreview/ClassPreview';

Controls the positioning of a single flex or grid element along the transverse axis of its container.

<ClassList
  classData={[
    {
        className: 'as-auto',
        properties: [
            'align-self: auto;'
        ]
    },
    {
        className: 'as-n',
        properties: [
            'align-self: normal;'
        ]
    },
    {
        className: 'as-c',
        properties: [
            'align-self: center;'
        ]
    },
    {
        className: 'as-start',
        properties: [
            'align-self: start;'
        ]
    },
    {
        className: 'as-e',
        properties: [
            'align-self: end;'
        ]
    },
    {
        className: 'as-fs',
        properties: [
            'align-self: flex-start;'
        ]
    },
    {
        className: 'as-fe',
        properties: [
            'align-self: flex-end;'
        ]
    },
    {
        className: 'as-stretch',
        properties: [
            'align-self: stretch;'
        ]
    }
  ]}
/>

### Using breakpoints

The utilization of breakpoint modifiers like `sm:as-*`, `md:as-*`, `lg:as-*` enables the targeting of specific utilities in disparate viewports.